Changed from var-args to conventional args. Reflected suggestions.